force-app/infrastructure/apex-extensions/main/application/dynamic/objects/fflib_AppBinding__mdt/fflib_AppBinding__mdt.object-meta.xml
<CustomObject>
    <label>Application Binding</label>
    <pluralLabel>Application Bindings</pluralLabel>
</CustomObject>