force-app/infrastructure/apex-extensions/main/application/dynamic/objects/fflib_AppBinding__mdt/fields/BindingObject__c.field-meta.xml
<CustomField>
    <fullName>BindingObject__c</fullName>
    <label>Binding Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>BindingObjects</relationshipLabel>
    <relationshipName>BindingObjects</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>