force-app/infrastructure/apex-extensions/main/application/dynamic/objects/fflib_AppBinding__mdt/fields/ImplementationType__c.field-meta.xml
<CustomField>
    <fullName>ImplementationType__c</fullName>
    <label>Implementation Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>