force-app/infrastructure/apex-extensions/main/application/dynamic/objects/fflib_AppBinding__mdt/fields/InterfaceType__c.field-meta.xml
<CustomField>
    <fullName>InterfaceType__c</fullName>
    <label>Interface Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>