force-app/infrastructure/apex-extensions/main/application/dynamic/objects/fflib_AppBinding__mdt/fields/SharingMode__c.field-meta.xml
<CustomField>
    <fullName>SharingMode__c</fullName>
    <defaultValue>&quot;With Sharing&quot;</defaultValue>
    <label>Sharing mode</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>With Sharing</fullName>
                <default>true</default>
                <label>With Sharing</label>
            </value>
            <value>
                <fullName>Without Sharing</fullName>
            </value>
            <value>
                <fullName>Inherited Sharing</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>