force-app/infrastructure/apex-extensions/main/application/dynamic/objects/fflib_AppBinding__mdt/validationRules/Require_Interface_Type_For_Services.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Interface_Type_For_Services</fullName>
    <active>true</active>
    <description>An Interface Type is required for Service class Bindings</description>
    <errorConditionFormula>AND(ISPICKVAL(Type__c,&quot;Service&quot;), ISBLANK( InterfaceType__c ) )</errorConditionFormula>
    <errorDisplayField>ImplementationType__c</errorDisplayField>
    <errorMessage>An Interface Type is required for Service class Bindings</errorMessage>
</ValidationRule>