force-app/infrastructure/apex-extensions/main/application/dynamic/objects/fflib_AppBinding__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>BindingObject__c</columns>
    <columns>BindingObjectAlternate__c</columns>
    <columns>BindingSequence__c</columns>
    <columns>InterfaceType__c</columns>
    <columns>ImplementationType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>